<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fib.upc.albertsegarraroca.parquing.AboutActivity"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/background_hue"
        android:id="@+id/relativeLayout2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btnAbout"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@drawable/button_custom_transparent"
            android:clickable="true"
            android:onClick="goBack">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:id="@+id/imageView5"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:clickable="false"
                android:layout_gravity="center" />
        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="16dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView7"
            android:background="@drawable/ic_launcher"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background_hue"
            android:layout_marginTop="15sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_application"
                android:id="@+id/textView5"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_application_text"
                android:id="@+id/textView6"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_author"
                android:id="@+id/textView7"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_author_text"
                android:id="@+id/textView8"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
