<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    android:layout_height="60dp"
    android:background="@color/background"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:id="@+id/globalContainer">

    <Button
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:id="@+id/btnNewEntry"
        android:layout_gravity="start|center_vertical"
        android:drawableTop="@drawable/ic_enter"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:clickable="true"
        android:textSize="14sp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="#fff7fcff"
        android:background="@drawable/button_custom"
        android:enabled="true"
        android:text="@string/entry"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_weight="0" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:id="@+id/occupationIndicator"
        android:layout_weight="1"
        android:focusable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/occupation"
            android:id="@+id/txtOccupation"
            android:textSize="13sp"
            android:textAlignment="gravity"
            android:gravity="center_horizontal"
            android:textColor="#fffffcff"
            android:textAllCaps="true"
            android:ellipsize="middle"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10/10"
            android:id="@+id/txtOccupationInfo"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff7fcff" />
    </LinearLayout>

    <Button
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:id="@+id/btnNewExit"
        android:layout_gravity="start|center_vertical"
        android:drawableTop="@drawable/ic_exit"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:clickable="true"
        android:textSize="14sp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="#fff7fcff"
        android:background="@drawable/button_custom"
        android:enabled="true"
        android:text="@string/exit"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_weight="0" />

</LinearLayout>