<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fib.upc.albertsegarraroca.parquing.RevenueFragment"
    android:background="@color/background">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/background_hue">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_custom_special"
            android:layout_marginRight="1dp"
            android:clickable="true"
            android:id="@+id/btnInitialDate">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/iconDate1"
                android:background="@drawable/ic_date"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp"
                android:focusableInTouchMode="false" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/indicate_start"
                android:id="@+id/txtInitialDate"
                android:layout_weight="1"
                android:textColor="#ffffffff"
                android:gravity="center_vertical"
                android:editable="false"
                android:clickable="false"
                android:paddingLeft="5dp"
                android:autoText="false"
                android:layout_marginLeft="40dp"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="true"
                android:textAlignment="gravity"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_custom_special"
            android:id="@+id/btnFinalDate">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/iconDate2"
                android:background="@drawable/ic_date"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/indicate_end"
                android:id="@+id/txtFinalDate"
                android:layout_weight="1"
                android:textColor="#ffffffff"
                android:gravity="center_vertical"
                android:editable="false"
                android:clickable="false"
                android:paddingLeft="5dp"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="40dp"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.25">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/today"
                android:id="@+id/chckToday"
                android:layout_weight="1.25"
                android:textColor="#ffffffff"
                android:checked="false"
                android:textSize="15sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="47dp"
        android:id="@+id/infoRow"
        android:background="@color/background_hue"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:id="@+id/txtIncome"
                android:textSize="15dp"
                android:textColor="#ffffffff"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="2323299,00 € "
                android:id="@+id/txtIncomeInfo"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:editable="true"
                android:clickable="true"
                android:textSize="14dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entries"
                android:id="@+id/txtEntries"
                android:textSize="15dp"
                android:textColor="#ffffffff"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="255"
                android:id="@+id/txtEntriesInfo"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:editable="true"
                android:clickable="true"
                android:textSize="14dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exits"
                android:id="@+id/txtExits"
                android:textSize="15dp"
                android:textColor="#ffffffff"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="256"
                android:id="@+id/txtExitsInfo"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:editable="true"
                android:clickable="true"
                android:textSize="14dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@drawable/button_custom_special"
            android:id="@+id/btnReload"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_gravity="center"
                android:background="@drawable/ic_reload" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="99dp">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/listView"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_dates"
        android:id="@+id/txtSelectInterval"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textAlignment="gravity"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
</FrameLayout>
